[package]
name = "shittyrustea"
version = "0.1.0"
authors = ["theCow61 <theCow61@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.4.0", features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
telegram-bot = "0.8.0" 
dotenv = "0.15.0"
serde = "1.0.123"
serde_json = "1.0.64"
serde_derive = "1.0.123"
regex = "1.4.3"
lazy_static = "1.4.0"
#async-std = "1.9.0"
#smol = "1.2.5"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"

[dependencies.async-std]
version = "1.9.0"
features = ["tokio1", "tokio02"]
#async-compat = "0.2.1"
